--- a/commerce/ondc/reconciliation.yaml
+++ b/commerce/ondc/reconciliation.yaml
@@ -452,8 +452,8 @@ components:
             type: object
             properties:
                 refund_eligible:
-                description: Indicates if cancellation will result in a refund
-                type: boolean
+                    description: Indicates if cancellation will result in a refund
+                    type: boolean
                 return_eligible:
                     description: Indicates if cancellation will result in a return to origin
                     type: boolean
@@ -982,6 +982,8 @@ components:
                     type: array
                     items:
                         $ref: "#/components/schemas/ReplacementTerm"
+                xinput_required:
+                    $ref: "#/components/schemas/XInput"
                 time:
                     $ref: "#/components/schemas/Time"
                 rating_policy:
